[metadata]
name = ffsdb
version = 0.1.0
author = Fxadecimal
author_email = fxadecimal@users.noreply.github.com
description = Lightweight file system database for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fxadecimal/ffsdb.py
license = MIT
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
zip_safe = False
include_package_data = True
packages = find:

[options.package_data]


[options.extras_require]
maintainer =
    zest.releaser[recommended]
dev =
    tox==4.*
    black


[options.packages.find]
exclude =
    tests
    docs